# siGFX

./: CMakeLists.txt  README.md
.cache/clangd/index/: body.cpp.C60FB5DCAAE800FB.idx
demos/inc/common/core/: demo-player.h  gfx-demo.h
demos/inc/curses/: curses-demo-player.h
demos/inc/glfw/: glfw-demo-player.h
demos/src/: CMakeLists.txt
demos/src/common/: CMakeLists.txt
demos/src/common/animations/: CMakeLists.txt
demos/src/common/animations/boids/: boids-demo.cpp
demos/src/common/animations/fireworks/: firework.cpp  fireworks-demo.cpp  particle.cpp
demos/src/common/animations/fractal/: fractal-demo.cpp
demos/src/common/animations/physics/: physics-demo.cpp
demos/src/common/animations/shader/: CMakeLists.txt  shader-demo.cpp
demos/src/common/animations/snake/: snake-demo.cpp
demos/src/common/animations/space/: body.cpp  camera.cpp  simulate.cpp  space-demo.cpp
demos/src/common/animations/star/: CMakeLists.txt  star-demo.cpp
demos/src/common/animations/test-3D/: CMakeLists.txt  test-3D-demo.cpp
demos/src/common/animations/text/: CMakeLists.txt  text-demo.cpp
demos/src/common/animations/video/: CMakeLists.txt  video-demo.cpp
demos/src/common/core/: demo-player.cpp
demos/src/curses/: CMakeLists.txt
demos/src/curses/animations/: CMakeLists.txt  main.cpp
demos/src/glfw/: CMakeLists.txt
demos/src/glfw/animations/: CMakeLists.txt  main.cpp
gfx/: CMakeLists.txt
gfx/inc/gfx/core/: camera.h  primitive-2D.h  primitive-3D.h  render-2D.h  scene-graph-2D.h  scene-graph-3D.h  shader-2D.h
gfx/inc/gfx/debug/: debug-viewer.h
gfx/inc/gfx/geometry/: flatten.h  transform-3D.h  triangulate.h
gfx/inc/gfx/math/: box3.h  matrix.h  vec2.h  vec3.h
gfx/inc/gfx/primitives/: circle-2D.h  cone-3D.h  cuboid-3D.h  ellipse-2D.h  sphere-3D.h  text-2D.h
gfx/inc/gfx/shaders/: default-shader-2D.h  default-vertex-shader.h  diffuse-fragment-shader.h
gfx/inc/gfx/text/: font-manager-ttf.h  font-ttf.h
gfx/src/: CMakeLists.txt
gfx/src/core/: primitive-2D.cpp  primitive-3D.cpp  render-3D.cpp  render-engine.cpp  render-surface.cpp  scene-graph-3D.cpp  thread-pool.cpp
gfx/src/core/material/: CMakeLists.txt  fragment-shader.cpp  material.cpp  texture.cpp
gfx/src/core/types/: CMakeLists.txt  barycentric-triangle.cpp  bitmap.cpp  color4.cpp  frustum.cpp  obb-2D.cpp  uuid.cpp
gfx/src/geometry/: flatten.cpp  rasterize.cpp  transform-2D.cpp
gfx/src/primitives/: circle-2D.cpp  cone-3D.cpp  ellipse-2D.cpp  plane-3D.cpp  polygon-2D.cpp  polygon-3D.cpp  polyline-2D.cpp  text-2D.cpp
gfx/src/text/: utf-8.cpp
inc/demos/common/core/: demo-player.h  demo-utils.h  gfx-demo.h
inc/demos/common/interactive/: interactive-demo.h
inc/demos/curses/: curses-demo-player.h  curses-utils.h
inc/demos/glfw/: glfw-demo-player.h
inc/gfx/core/: camera.h  primitive-2D.h  primitive-3D.h  render-2D.h  render-3D.h  render-engine.h  render-surface.h  scene-graph-2D.h  scene-graph-3D.h  shader-2D.h  shader-3D.h  thread-pool.h
inc/gfx/core/material/: fragment-shader.h  material.h  texture.h  vertex-shader.h
inc/gfx/core/types/: barycentric-triangle.h  bitmap.h  color4.h  frustum.h  obb-2D.h  obb-3D.h  pixel.h  polygon-mesh.h  uuid.h
inc/gfx/debug/: debug-viewer.h
inc/gfx/geometry/: flatten.h  polygon-mesh.h  rasterize.h  transform-2D.h  transform-3D.h  transform.h  triangle.h  triangulate.h
inc/gfx/geometry/types/: barycentric-triangle.h  polygon-mesh.h  polygon.h  triangle.h
inc/gfx/math/: box2.h  box3.h  matrix.h  quaternion.h  vec2.h  vec3.h
inc/gfx/primitives/: bitmap-2D.h  circle-2D.h  cone-3D.h  cuboid-3D.h  ellipse-2D.h  plane-3D.h  polygon-2D.h  polygon-3D.h  polyline-2D.h  sphere-3D.h  text-2D.h
inc/gfx/shaders/: basic-shader-3D.h  default-frag-shader.h  default-fragment-shader.h  default-shader-2D.h  default-shader-3D.h  default-vert-shader.h  default-vertex-shader.h  diffuse-frag-shader.h  diffuse-fragment-shader.h  test-shader.h
inc/gfx/surfaces/curses/: curses-render-surface.h
inc/gfx/surfaces/glfw/: glfw-render-surface.h
inc/gfx/text/: font-manager-ttf.h  font-ttf.h  font.h  utf-8.h
src/: CMakeLists.txt
src/demos/: CMakeLists.txt
src/demos/common/: CMakeLists.txt
src/demos/common/animations/: CMakeLists.txt
src/demos/common/animations/test-3D/: CMakeLists.txt  test-3D-demo.cpp
src/demos/common/core/: CMakeLists.txt  demo-player.cpp
src/demos/common/interactive/: CMakeLists.txt  interactive-demo.cpp
src/demos/curses/: CMakeLists.txt
src/demos/curses/animations/: main.cpp
src/demos/curses/interactive/: CMakeLists.txt  curses-interactive-demo.cpp
src/demos/glfw/: CMakeLists.txt
src/demos/glfw/animations/: main.cpp
src/gfx/core/: CMakeLists.txt  camera.cpp  primitive-2D.cpp  primitive-3D.cpp  render-2D.cpp  render-3D.cpp  render-engine.cpp  render-surface.cpp  scene-graph-2D.cpp  scene-graph-3D.cpp  shader-2D.cpp  thread-pool.cpp
src/gfx/core/material/: CMakeLists.txt  fragment-shader.cpp  material.cpp  texture.cpp  vertex-shader.cpp
src/gfx/core/types/: CMakeLists.txt  barycentric-triangle.cpp  bitmap.cpp  bounding-sphere.cpp  color4.cpp  obb-2D.cpp  obb-3D.cpp  polygon-mesh.cpp  sphere.cpp  uuid.cpp
src/gfx/debug/: CMakeLists.txt  debug-viewer.cpp
src/gfx/geometry/: CMakeLists.txt  flatten.cpp  polygon-mesh.cpp  rasterize.cpp  transform-2D.cpp  transform-3D.cpp  transform.cpp  triangulate.cpp
src/gfx/geometry/types/: CMakeLists.txt  barycentric-triangle.cpp  polygon-mesh.cpp
src/gfx/primitives/: CMakeLists.txt  bitmap-2D.cpp  circle-2D.cpp  cone-3D.cpp  cuboid-3D.cpp  cuboid.cpp  ellipse-2D.cpp  plane-3D.cpp  polygon-2D.cpp  polygon-3D.cpp  polyline-2D.cpp  sphere-3D.cpp  text-2D.cpp
src/gfx/surfaces/: CMakeLists.txt
src/gfx/surfaces/curses/: CMakeLists.txt  curses-render-surface.cpp
src/gfx/surfaces/glfw/: CMakeLists.txt  glad.c  (+1 more)
src/gfx/text/: CMakeLists.txt  font-manager-ttf.cpp  font-ttf.cpp  utf-8.cpp
src/gfx/utils/: CMakeLists.txt
surfaces/curses/: CMakeLists.txt  curses-render-surface.cpp
surfaces/glfw/: CMakeLists.txt  glad.c  glad.h  glfw-render-surface.cpp  glfw-render-surface.h  khrplatform.h
(+70 files in other folders)
